# Aegis

./: Cargo.toml  README.md  build.rs
aegis/: Cargo.toml
aegis/src/: lib.rs
aegis/src/utils/: antivm.rs  fake_error.rs  filepump.rs  grab.rs  mod.rs  mongodb.rs  process.rs  remote.rs  send.rs  startup.rs  webhook.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: main.rs  mod.rs
src/utils/: discord.rs  grab.rs  mod.rs  webhook.rs
template/: Cargo.toml
template/src/: main.rs
